--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <section class="hero-section text-center">
     <div class="container">
         <h1 class="display-4 fw-bold">Fake News Detection System</h1>
-        <p class="lead">Harnessing Deep Learning to fight misinformation.</p>
+        <p class="lead">Harnessing Machine Learning to fight misinformation.</p>
     </div>
 </section>
 
@@ -86,6 +86,7 @@
 <footer class="text-center mt-5 mb-4 text-muted">
     <small>Academic Project © 2026 | Built with Flask & Scikit-Learn</small>
 </footer>
+<script src="script.js"></script>
 
 </body>
 </html>
